--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,5 +1,5 @@
 deployment:
 task:
- - export DEPLOYPATH=/home/guidelin/misiApi.lamptechs.com
+ - export DEPLOYPATH=/home/naimurra/kenakatabd.naimurrahman.xyz
  - /bin/cp index.html $DEPLOYPATH
  - /bin/cp style.css $DEPLOYPATH
